@@ -118,6 +118,14 @@
 # This is a non-standard option explicitly disallowed by the spec.
 #upgrade_outgoing_qos false
 
+# This option allows to specify the QoS with which the messages delivered to
+# another broker through a bridge will be published, regardless the QoS level
+# of the original incoming messages. The desired QoS is specified for each
+# bridge in the bridge connection section.
+# If this option is disabled, then the QoS level specified for a bridge will be
+# used as an upper limit respect to the QoS of the original incoming messages.
+#upgrade_bridge_qos false
+
 # =================================================================
 # Default listener
 # =================================================================
